uncommenting lines in n05

--- a/scripts/NLP_radio_processing/N05_ner_models.ipynb
+++ b/scripts/NLP_radio_processing/N05_ner_models.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [
     {
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -623,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [
     {
@@ -685,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -718,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [
     {
@@ -753,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [
     {
@@ -816,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -957,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -980,7 +980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1011,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [
     {
@@ -1077,23 +1077,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 207,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using device: cuda\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of DebertaV2ForTokenClassification were not initialized from the model checkpoint at microsoft/deberta-v3-large and are newly initialized: ['classifier.bias', 'classifier.weight']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model loaded: microsoft/deberta-v3-large\n",
+      "Number of labels: 19\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
-    "# device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "# print(f\"Using device: {device}\")\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "print(f\"Using device: {device}\")\n",
     "\n",
-    "# num_labels = len(tag2id)  # Use our existing tag2id mapping\n",
-    "# model = DebertaV2ForTokenClassification.from_pretrained(\n",
-    "#     model_name, \n",
-    "#     num_labels=num_labels\n",
-    "# )\n",
-    "# model.to(device)\n",
+    "num_labels = len(tag2id)  # Use our existing tag2id mapping\n",
+    "model = DebertaV2ForTokenClassification.from_pretrained(\n",
+    "    model_name, \n",
+    "    num_labels=num_labels\n",
+    ")\n",
+    "model.to(device)\n",
     "\n",
-    "# print(f\"Model loaded: {model_name}\")\n",
-    "# print(f\"Number of labels: {num_labels}\")"
+    "print(f\"Model loaded: {model_name}\")\n",
+    "print(f\"Number of labels: {num_labels}\")"
    ]
   },
   {
@@ -1118,7 +1142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1188,7 +1212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1253,7 +1277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1307,7 +1331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1378,7 +1402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1454,7 +1478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1513,7 +1537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1590,7 +1614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1703,7 +1727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [
     {
@@ -1739,36 +1763,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 217,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using device: cuda\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of the model checkpoint at dbmdz/bert-large-cased-finetuned-conll03-english were not used when initializing BertForTokenClassification: ['bert.pooler.dense.bias', 'bert.pooler.dense.weight']\n",
+      "- This IS expected if you are initializing BertForTokenClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing BertForTokenClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
+      "Some weights of BertForTokenClassification were not initialized from the model checkpoint at dbmdz/bert-large-cased-finetuned-conll03-english and are newly initialized because the shapes did not match:\n",
+      "- classifier.bias: found shape torch.Size([9]) in the checkpoint and torch.Size([19]) in the model instantiated\n",
+      "- classifier.weight: found shape torch.Size([9, 1024]) in the checkpoint and torch.Size([19, 1024]) in the model instantiated\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model loaded: dbmdz/bert-large-cased-finetuned-conll03-english\n",
+      "Number of labels: 19\n"
+     ]
+    }
+   ],
    "source": [
-    "# # ===========================\n",
-    "# # Bert Large Model Initialization\n",
-    "# # ===========================\n",
+    "# ===========================\n",
+    "# Bert Large Model Initialization\n",
+    "# ===========================\n",
     "\n",
-    "# # Determine the computation device (GPU if available, otherwise CPU)\n",
-    "# device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "# print(f\"Using device: {device}\")  # Print the selected device\n",
+    "# Determine the computation device (GPU if available, otherwise CPU)\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "print(f\"Using device: {device}\")  # Print the selected device\n",
     "\n",
-    "# # Get the number of labels based on the tag-to-ID mapping\n",
-    "# num_labels = len(tag2id)\n",
+    "# Get the number of labels based on the tag-to-ID mapping\n",
+    "num_labels = len(tag2id)\n",
     "\n",
-    "# # Load the pretrained BERT model for token classification\n",
-    "# model = BertForTokenClassification.from_pretrained(\n",
-    "#     model_name,  # Pretrained BERT model name\n",
-    "#     num_labels=num_labels,  # Number of classification labels\n",
-    "#     id2label={i: l for l, i in tag2id.items()},  # Map IDs to labels (for interpretability)\n",
-    "#     label2id=tag2id,  # Map labels to IDs (for training and inference)\n",
-    "#     ignore_mismatched_sizes=True  # Allows model loading even if the classifier head size differs\n",
-    "# )\n",
+    "# Load the pretrained BERT model for token classification\n",
+    "model = BertForTokenClassification.from_pretrained(\n",
+    "    model_name,  # Pretrained BERT model name\n",
+    "    num_labels=num_labels,  # Number of classification labels\n",
+    "    id2label={i: l for l, i in tag2id.items()},  # Map IDs to labels (for interpretability)\n",
+    "    label2id=tag2id,  # Map labels to IDs (for training and inference)\n",
+    "    ignore_mismatched_sizes=True  # Allows model loading even if the classifier head size differs\n",
+    ")\n",
     "\n",
-    "# # Move the model to the selected device (GPU/CPU)\n",
-    "# model.to(device)\n",
+    "# Move the model to the selected device (GPU/CPU)\n",
+    "model.to(device)\n",
     "\n",
-    "# # Print model information\n",
-    "# print(f\"Model loaded: {model_name}\")  # Confirm the model has been loaded\n",
-    "# print(f\"Number of labels: {num_labels}\")  # Display the number of classification labels\n"
+    "# Print model information\n",
+    "print(f\"Model loaded: {model_name}\")  # Confirm the model has been loaded\n",
+    "print(f\"Number of labels: {num_labels}\")  # Display the number of classification labels\n"
    ]
   },
   {
@@ -1868,7 +1921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1955,7 +2008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2016,7 +2069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 220,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2076,7 +2129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 221,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2111,7 +2164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 222,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2229,19 +2282,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 223,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of the model checkpoint at dbmdz/bert-large-cased-finetuned-conll03-english were not used when initializing BertForTokenClassification: ['bert.pooler.dense.bias', 'bert.pooler.dense.weight']\n",
+      "- This IS expected if you are initializing BertForTokenClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing BertForTokenClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
+      "Some weights of BertForTokenClassification were not initialized from the model checkpoint at dbmdz/bert-large-cased-finetuned-conll03-english and are newly initialized because the shapes did not match:\n",
+      "- classifier.bias: found shape torch.Size([9]) in the checkpoint and torch.Size([19]) in the model instantiated\n",
+      "- classifier.weight: found shape torch.Size([9, 1024]) in the checkpoint and torch.Size([19, 1024]) in the model instantiated\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
+     ]
+    }
+   ],
    "source": [
-    "# # 1. First, load the saved model that we have already trained\n",
-    "# model_path = '../../outputs/week4/models/best_bert_large_ner_model.pt'  \n",
-    "# model = BertForTokenClassification.from_pretrained(\n",
-    "#     \"dbmdz/bert-large-cased-finetuned-conll03-english\",\n",
-    "#     num_labels=len(tag2id),\n",
-    "#     id2label={i: l for l, i in tag2id.items()},\n",
-    "#     label2id=tag2id,\n",
-    "#     ignore_mismatched_sizes=True\n",
-    "# )\n",
+    "# 1. First, load the saved model that we have already trained\n",
+    "model_path = '../../outputs/week4/models/best_bert_large_ner_model.pt'  \n",
+    "model = BertForTokenClassification.from_pretrained(\n",
+    "    \"dbmdz/bert-large-cased-finetuned-conll03-english\",\n",
+    "    num_labels=len(tag2id),\n",
+    "    id2label={i: l for l, i in tag2id.items()},\n",
+    "    label2id=tag2id,\n",
+    "    ignore_mismatched_sizes=True\n",
+    ")\n",
     "\n"
    ]
   },
@@ -2252,13 +2319,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 224,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\victo\\AppData\\Local\\Temp\\ipykernel_27892\\3129886198.py:1: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "  model.load_state_dict(torch.load(model_path))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pre-trained model loaded successfully\n"
+     ]
+    }
+   ],
    "source": [
-    "# model.load_state_dict(torch.load(model_path))\n",
-    "# model.to(device)\n",
-    "# print(\"Pre-trained model loaded successfully\")"
+    "model.load_state_dict(torch.load(model_path))\n",
+    "model.to(device)\n",
+    "print(\"Pre-trained model loaded successfully\")"
    ]
   },
   {
@@ -2293,7 +2376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2378,7 +2461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [
     {
@@ -2431,7 +2514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2466,7 +2549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2485,7 +2568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2566,7 +2649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 230,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2643,7 +2726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 231,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2757,7 +2840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2906,7 +2989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2965,7 +3048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [
     {
