added folder for tyre age prediction

--- a/scripts/lap_prediction.ipynb
+++ b/scripts/lap_prediction.ipynb
@@ -6326,7 +6326,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6. Feature Engineering y Limpieza de Datos"
+    "## 6. Feature Engineering and Data Cleaning"
    ]
   },
   {
